# ann-benchmarks

./: .gitignore
ann_benchmarks/algorithms/base/: Dockerfile
ann_benchmarks/algorithms/nndescent/: Dockerfile  config.yml
ann_benchmarks/algorithms/nndescent_m/: .clang-format  Dockerfile  config.yml  module.py  test.py
ann_benchmarks/algorithms/nndescent_m/source/: CMakeLists.txt  main.cpp  nndescent_m.pyi  pyproject.toml
