[build-system]
requires = ["scikit-build-core", "pybind11", "ninja", "cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "nndescent_m"
version = "0.0.1"
description = "NNDescent with CMake"
requires-python = ">=3.7"

[tool.scikit-build]
build-dir = "build"

cmake.version = ">=3.20"
cmake.build-type = "Debug"
